[gd_scene load_steps=5 format=3 uid="uid://0wo0pruo8tu2"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_f8mmy"]
[ext_resource type="Texture2D" uid="uid://cs8bxnhmpahog" path="res://icon.svg" id="1_qikwg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p31xq"]
radius = 47.93

[sub_resource type="CircleShape2D" id="CircleShape2D_20mxo"]
radius = 7.31219

[node name="Enemy" type="CharacterBody2D"]
rotation = -1.5708
collision_layer = 2
collision_mask = 0
motion_mode = 1
platform_floor_layers = 0
script = ExtResource("1_f8mmy")
metadata/_edit_vertical_guides_ = [0.0]
metadata/_edit_horizontal_guides_ = [0.0]

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("1_qikwg")

[node name="Icon2" type="Sprite2D" parent="."]
position = Vector2(0, 72)
scale = Vector2(0.239049, 0.30088)
texture = ExtResource("1_qikwg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.00020165, -1.54899e-06)
scale = Vector2(1.01416, 1.00632)
shape = SubResource("CircleShape2D_p31xq")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
scale = Vector2(7.8, 7.8)
shape = SubResource("CircleShape2D_20mxo")
debug_color = Color(0.980569, 0.127869, 0.129904, 0.42)

[node name="Shooting_Point" type="Marker2D" parent="."]
position = Vector2(-0.000311319, 86)
rotation = 1.57079

[node name="Shooting_Point2" type="Marker2D" parent="Shooting_Point"]
position = Vector2(7.62939e-05, -13)
rotation = 1.0472

[node name="Shooting_Point3" type="Marker2D" parent="Shooting_Point"]
position = Vector2(-6.10352e-05, 12)
rotation = 0.523598

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Despawn" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Despawn" to="." method="_on_despawn_timeout"]
